<resources>
    <string name="app_name">MyChatApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chatmeup">ChatMeUp</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="create_your_account">Create your account</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="send">SEND</string>
    <string name="by_registering_you_are_agreeing_to_our_terms_of_use_and_privacy_policy">By registering, you are agreeing to our Terms of use and Privacy Policy.</string>

</resources>