<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/constraintbackground"
    android:textAlignment="center"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textColor="@color/darkwhite"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/darkwhite"
        android:textSize="49sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/edittextbackground"
        android:drawableStart="@drawable/person"
        android:ems="10"
        android:lines="1"
        android:inputType="text"
        android:maxLength="20"
        android:hint="@string/username"
        android:paddingStart="15dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/edittextbackground"
        android:drawableStart="@drawable/baseline_email_24"
        android:ems="10"
        android:lines="1"
        android:inputType="text"
        android:hint="@string/email"
        android:paddingStart="15dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/edittextbackground"
        android:drawableStart="@drawable/lock"
        android:ems="10"
        android:hint="@string/password"
        android:paddingStart="15dp"
        android:lines="1"
        android:inputType="text"
        android:maxLength="20"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />


    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/edittextbackground"
        android:drawableStart="@drawable/lock"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:paddingStart="15dp"
        android:lines="1"
        android:inputType="text"
        android:maxLength="20"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/signUpButton"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonbackgroundone"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/haveAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/darkwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <TextView
        android:id="@+id/privacyTextView"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/by_registering_you_are_agreeing_to_our_terms_of_use_and_privacy_policy"
        android:textAlignment="textStart"
        android:textColor="@color/darkwhite"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <TextView
        android:id="@+id/registerLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/darkwhite"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />


</androidx.constraintlayout.widget.ConstraintLayout>