<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/constraintbackground"
    android:textAlignment="center"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/loginUsernameEditText"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/edittextbackground"
        android:drawableLeft="@drawable/person"
        android:lines="1"
        android:inputType="text"
        android:maxLength="20"
        android:ems="10"
        android:hint="@string/username"
        android:paddingLeft="10dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/edittextbackground"
        android:drawableStart="@drawable/lock"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="20"
        android:ems="10"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />


    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="132dp"
        android:layout_height="25dp"
        android:text="Remember me"
        android:textColor="@color/darkwhite"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <TextView
        android:id="@+id/loginSignUpTextView"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:text="Sign up"
        android:textAlignment="center"
        android:textColor="@color/darkwhite"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

    <TextView
        android:id="@+id/haventAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="Don't have an account?"
        android:textAlignment="center"
        android:textColor="@color/darkwhite"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />

    <TextView
        android:id="@+id/loginToAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/loginWelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:text="Forgot Password?"
        android:textAlignment="center"
        android:textColor="@color/darkwhite"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/loginLoginButton"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonbackgroundone"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>